--- a/src/index.css
+++ b/src/index.css
@@ -104,8 +104,9 @@ header {
 .container {
   width: min(90%, 45rem);
   margin: 2rem auto;
-  min-height: 100%;
-  outline: 2px solid blue;
+  /* min-height: 100%; */
+  /* height: 300px; */
+  /* outline: 2px solid blue; */
 }
 
 .container > h1 {
@@ -192,9 +193,9 @@ header {
   /* max-width: 100%;
   max-height: 36rem; */
   border-radius: 1.5%;
-  width: 100%;
-  /* display: flex; */
-  /* margin: 0 auto; */
+  width: 80%;
+  display: flex;
+  margin: 0 auto;
 
 }
 
@@ -255,10 +256,10 @@ header {
     /* max-width: 100%;
     max-height: 36rem; */
     border-radius: 1.5%;
-    width: 40%;
+    width: 60%;
     /* display: flex; */
     /* margin: 0 auto; */
-  
+    outline: 2px solid black;
   }
 
   .hero__details {
@@ -267,4 +268,9 @@ header {
     outline: 2px solid green;
     width: 100%;
   }
+}
+
+.searchForm_container {
+  outline: 2px solid black;
+  margin-top: 24px;
 }
